--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,8 +3,12 @@
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   font-weight: normal;
+}
+
+main {
+    padding: 2rem;
 }
 
 a,
@@ -38,4 +42,13 @@ table {
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
+}
+
+
+.dark {
+  background-color: #000;
+}
+
+.ligth {
+  background-color: rgb(191, 228, 243);
 }
